css/style.css
/*Fonts*/
@font-face {
    font-family: norse-bold;
    src: url(../fonts/norse-bold-webfont.woff2),
         url(../fonts/norse-bold-webfont.woff);
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: pacifico;
    src: url(../fonts/pacifico-webfont.woff2),
         url(../fonts/pacifico-webfont.woff);
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: quicksand;
    src: url(../fonts/quicksand-regular-webfont.woff2),
         url(../fonts/quicksand-regular-webfont.woff);
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: quicksand;
    src: url(../fonts/quicksand-bold-webfont.woff2),
         url(../fonts/quicksand-bold-webfont.woff);
    font-weight: bold;
    font-style: normal;
}

@font-face {
    font-family: quicksand;
    src: url(../fonts/quicksand-bolditalic-webfont.woff2),
         url(../fonts/quicksand-bolditalic-webfont.woff);
    font-weight: bold;
    font-style: italic;
}

:root {
    font-size: 16px;
    --white: #FFF;
    --gray: #EEE;
    --light: #E5E7EB;
    --left-padding: 64px;
    --right-padding: max(36px, 20%);
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    display: flex;
    font-family: quicksand, sans-serif;
}

/*sidebar*/
aside {
    position: relative;
    height: 100vh;
    min-width: 390px;
    overflow: clip;
    flex: 1;
    color: var(--white);
}

aside a {
    color: var(--white);
}

aside > img {
    position: relative;
    width: max(100vh, 34vw, 390px);
}

aside > div {
    position: absolute;
    top: 20%;
    height: max(20%, 7rem);
    width: 100%;
    padding: 12px 0;
    background-color: #00000066;
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    align-items: center;
}

aside h1 {
    font-family: norse-bold;
    font-size: 6rem;
}

aside > p {
    position: absolute;
    bottom: 20px;
    width: 100%;
    text-align: center;
}

aside > div > img {
    height: 100%;
}

main {
    flex: 2;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: start;
    background-color: var(--gray);
}

main > * {
    padding: 0 var(--right-padding) 0 var(--left-padding);
}

main > * + * {
    margin-top: 40px;
}
main > div {
    margin-top: 54px;
    background-color: var(--white);
    align-self: stretch;
}

form {
    width: max(80%, 600px);
    margin: 28px 0;
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    row-gap: 1rem;
}

form > div {
    display: flex;
    flex-flow: row wrap;
    justify-content: flex-start;
    width: max(45%, 250px);
}

div > label,
div > input {
    width: 100%;
}

div > h2 {
    margin-top: 28px;
    font-size: 1.8rem;
    font-weight: bold;
    letter-spacing: -0.1rem;
}

div > label {
    text-transform: uppercase;
    font-weight: bold;
    font-size: 0.8rem;
}

div > input {
    margin-top: 4px;
    appearance: none;
    border: 1px solid var(--light);
    border-radius: 6px;
    font-family: quicksand, sans-serif;
    font-size: 1.2rem;
    padding: 0.3rem 0.6rem;
}

